fix storing _new_todo on store instead of page where it should be

--- a/app/main/views/main/todos.html
+++ b/app/main/views/main/todos.html
@@ -37,7 +37,7 @@
       <form e-submit="add_todo" role="form">
         <div class="form-group">
            <label>Add Todo:</label>
-           <input class="form-control" type="text" value="{_new_todo._label}" />
+           <input class="form-control" type="text" value="{page._new_todo._label}" />
         </div>
       </form>
     </div>
