--- a/app/main/views/main/meal_cost.html
+++ b/app/main/views/main/meal_cost.html
@@ -7,5 +7,5 @@
   <form>
     <p>Meal Cost: <input type="text" value="{_meal_cost}" /></p>
     <p>Number of People: <input type="text" value="{_number_of_people}" /></p>
-    <p>Share Per Person: <b>{_person_share}</b></p>
+    <p>Share Per Person: <b>{person_share}</b></p>
   </form>
