--- a/app/main/views/main/todos.html
+++ b/app/main/views/main/todos.html
@@ -5,7 +5,7 @@
   <div class="row">
     <div class="col-md-4">
 
-      <h1>{_todos.size} Todos</h1>
+      <h1>{completed}/{_todos.size} Todos</h1>
 
       <div class="row">
         <div class="col-md-6">
