--- a/app/main/views/main/collections.html
+++ b/app/main/views/main/collections.html
@@ -34,7 +34,7 @@
   </select>
 
   <input type="text" value="{page._state}" />
-  <input type="text" value="{page._opts}" />
+  <!-- <input type="text" value="{page._opts}" /> -->
 
 <!--  <select value="{page._sel_opt}">
     {#each options as opt}
