--- a/app/main/views/blog/new.html
+++ b/app/main/views/blog/new.html
@@ -5,9 +5,9 @@
   <h1>New Blog Post</h1>
 
   <form e-submit="save" role="form">
-    <:fields:text value="{_title}" label="Title:" />
+    <:fields:text value="{{ _title }}" label="Title:" />
 
-    <:fields:textarea value="{_body}" label="Post:" />
+    <:fields:textarea value="{{ _body }}" label="Post:" />
 
     <button>Save</button>
   </form>
