--- a/app/main/views/comments/index.html
+++ b/app/main/views/comments/index.html
@@ -1,6 +1,6 @@
 <hr />
 <p>
-  <b>{_name}</b>
+  <b>{{ _name }}</b>
   <a style="float: right;" e-click="model.parent.delete(model)">X</a>
 </p>
-<p>{_body}</p>
+<p>{{ _body }}</p>
