--- a/app/main/views/blog/show.html
+++ b/app/main/views/blog/show.html
@@ -1,18 +1,18 @@
 <:Title>
-  {_title}
+  {{ _title }}
 
 <:Body>
-  {#if model && model.persistor && state == :loaded}
-    <h1>{_title}</h1>
+  {{ if model && model.persistor && state == :loaded }}
+    <h1>{{ _title }}</h1>
 
-    <p>{_body}</p>
+    <p>{{ _body }}</p>
 
-    {#each model._comments as comment}
-      <:comments comment="{comment}" />
-    {/}
+    {{ model._comments.each do |comment| }}
+      <:comments comment="{{ comment }}" />
+    {{ end }}
 
-    <:comments:new post="{model}" />
+    <:comments:new post="{{ model }}" />
 
-  {#else}
-    <p>Loading... {model.html_inspect}</p>
-  {/}
+  {{ else }}
+    <p>Loading... {{ model.html_inspect }}</p>
+  {{ end }}
