--- a/app/main/views/main/todos.html
+++ b/app/main/views/main/todos.html
@@ -5,11 +5,11 @@
   <div class="row">
     <div class="col-md-4">
 
-      <h1>{completed}/{_todos.size} Todos</h1>
+      <h1>{{ completed }}/{{ _todos.size }} Todos</h1>
 
       <div class="row">
         <div class="col-md-6">
-          <p>{completed} complete</p>
+          <p>{{ completed }} complete</p>
         </div>
         <div class="col-md-6">
           <button e-click="check_all">Check All</button>
@@ -17,35 +17,35 @@
       </div>
 
       <div class="progress">
-        <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: {percent_complete}%;">
-          {percent_complete}%
+        <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: {{ percent_complete }}%;">
+          {{ percent_complete }}%
         </div>
       </div>
 
       <table class="table todo-table">
-        {#each _todos as todo}
+        {{ _todos.each do |todo| }}
           <tr
-            class="{#if params._index == index}selected{/}"
+            class="{{ if params._index == index }}selected{{ end }}"
             e-click="params._index = index">
-            <td><input type="checkbox" checked="{todo._complete}" /></td>
-            <td class="{#if todo._complete}complete{/}">{todo._label}</td>
+            <td><input type="checkbox" checked="{{ todo._complete }}" /></td>
+            <td class="{{ if todo._complete }}complete{{ end }}">{{ todo._label }}</td>
             <td><button e-click="self._todos.delete_at(index)">X</button></td>
           </tr>
-        {/}
+        {{ end }}
       </table>
 
       <form e-submit="add_todo" role="form">
         <div class="form-group">
            <label>Add Todo:</label>
-           <input class="form-control" type="text" value="{page._new_todo._label}" />
+           <input class="form-control" type="text" value="{{ page._new_todo._label }}" />
         </div>
       </form>
     </div>
     <div class="col-md-8">
-      {#if current_todo}
-        <h2>{current_todo._label}</h2>
+      {{ if current_todo }}
+        <h2>{{ current_todo._label }}</h2>
 
-        <textarea>{current_todo._description}</textarea>
-      {/}
+        <textarea>{{ current_todo._description }}</textarea>
+      {{ end }}
     </div>
   </div>
